# BratBot

./: .CLAUDE.inventory.md  .dockerignore  .env.example  .env.runpod.example  .gitattributes  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.runpod  Modelfile  README.md  ROADMAP.md  alembic.ini  bratbot-project-spec.md  docker-compose.override.yml  docker-compose.yml  pyproject.toml  supervisord.conf  supervisord.runpod.conf  test-api.sh
alembic/: env.py
docs/: 2026-03-21-engagement-features-design.md  DEPLOYMENT.md  MANUAL_TESTING.md  SMS_IMPLEMENTATION_PLAN.md  monetization-ideas.md  monetization-strategies.md  privacy-policy.html  privacy.html  terms.html
model/: app.py  interactions.py  requirements.txt  verify.py
model/prompts/: bonnie.txt.enc  bonnie.txt.example  (+4 more)
scripts/: deploy-runpod.sh  encrypt-prompts.py  pre-commit-encrypt-check.sh  runpod-entrypoint.sh  runpod-ssh-wrapper.py  test_bots.py  test_queries.yaml
sms/: .env.example  README.md  app.py  requirements.txt  settings.py
tests/: conftest.py  discord_keys.py  test_age_gate.py  test_age_verification_store.py  test_bonnie_pronoun_command.py  test_bonniebot_command.py  test_bot_harness.py  test_bratchat_modified.py  test_cami_command.py  test_conversation_history.py  test_intensity_command.py  test_intensity_store.py  test_llm_client.py  test_messages_handler.py  test_model_api.py  test_prompt_loader.py  test_pronoun_command.py  test_pronoun_store.py  test_request_queue.py  test_sms_gateway.py  test_verbose_command.py  test_verbosity_in_commands.py  test_verbosity_store.py  test_verify.py
(+51 files in other folders)
